2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * client/sftpuri.c:
	Make sure both no-port and port 22 refer to the same mount.
	
        * daemon/gvfsbackendsftp.c:
	Support ports. (#518504)

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	reviewed by:

	* daemon/gvfsbackenddav.c:
	Keep the SoupMessage around for as long as Multistatus is
	valid.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Add a SoupSessionAsync to be used for SoupInputStream doesn't
	yet work with SoupSessionSync. Also make sure we share
	authentication.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	- Port the mount operation to use the sync i/op.
	- Keep the auth information around so we can use them again in
	the case that a subpath requires different authentication. This
	is needed since libsoup will forgot all auth after a 401.
	- Ignore trailing slashes in ms_response_is_target ().
	- Add an initial version of make_directory ().
	* daemon/gvfsbackendhttp.c: 
	* daemon/gvfsbackendhttp.h:
	Add message_new_from_filename_full which will add a trailing "/"
	if is_dir is true. (Saves uneccesary redirects in some cases)

	Various bits and pieces came from Yann Rouillard.

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
	Support gnome-keyring (#511517)
	Patch from Carlos Garcia Campos

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendnetwork.c (recompute_files):
	Fix spelling inconsistency "Network" vs "network" (#518487)
	
2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvfs.c (get_mountspec_from_uri):
	g_uri_get_scheme -> g_uri_parse_scheme

2008-02-25  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* hal/ghalvolume.c (do_update_from_hal_for_camera): Add
	two translator comments.

2008-02-24  David Zeuthen  <davidz@redhat.com>

	* client/gdaemonfile.c: